# olsh

./: .commitlintrc.json  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.MD  TODO.md  WEATHER.md  quick-demo.olsh  quick-test.olsh  test-weather.olsh  test_script.osh
.github/workflows/: commitlint.yml  tests.yml
docs/: Builtins.MD  Scripting.MD
docs/examples/: example-script.olsh  weather-demo.olsh
include/: shell.h
include/builtins/: alias.h  builtin_registry.h  cat.h  cd.h  clear.h  config.h  cp.h  echo.h  help.h  history.h  joke.h  ls.h  mkdir.h  mv.h  pwd.h  rm.h  touch.h  weather.h
include/executor/: executor.h  process.h
include/parser/: ast.h  parser.h  tokenizer.h
include/utils/: autocomplete.h  colors.h  config.h  fs.h  input_manager.h  linenoise.h  readline.h  script.h  string.h  windows_compat.h
scripts/: weather.rb
src/: main.cpp  shell.cpp
src/builtins/: alias.cpp  builtin_registery.cpp  builtin_registry.cpp  cat.cpp  cd.cpp  clear.cpp  config.cpp  cp.cpp  echo.cpp  help.cpp  history.cpp  joke.cpp  ls.cpp  mkdir.cpp  mv.cpp  pwd.cpp  rm.cpp  touch.cpp  weather.cpp
src/executor/: executor.cpp  process.cpp
src/parser/: ast.cpp  parser.cpp  tokenizer.cpp
src/utils/: autocomplete.cpp  config.cpp  fs.cpp  input_manager.cpp  linenoise.cpp  readline.cpp  script.cpp  string.cpp  windows_compat.cpp
tests/: CMakeLists.txt  README.md  run_tests.py  test.py  test_all_features.py  test_comprehensive.py  test_edge_cases.py  test_input_handling.py  test_main.cpp  test_performance.py
